--- a/parser.css
+++ b/parser.css
@@ -4,10 +4,11 @@ html, body {
     padding: 0; 
     width: 100%; 
     height: 100%;
+    overflow: hidden;
 }
 .splitter {
     width: 100%;
-    height: 100%;
+    height: 84%;
     display: flex;
 }
 
@@ -50,8 +51,13 @@ html, body {
 }
 
 
-#actioncontainer{
-    
+#header{
+  height:8%;
+  border-bottom: 2px solid lightgray;
+}
+#footer{
+  height:8%;
+  border-top: 2px solid lightgray;
 }
 
 
@@ -100,4 +106,25 @@ html, body {
   border-color: #e77600;
   box-shadow: rgba(228, 121, 17, .5) 0 0 3px 2px;
   outline: 0;
+}
+.marT5{
+  margin-top: 5px;
+}
+.marT10{
+  margin-top: 10px;
+}
+.marT3{
+  margin-top: 3px;
+}
+.floL{
+  float: left;
+}
+.floR{
+  float: right;
+}
+.marL3{
+  margin-left: 3px;
+}
+.marR3{
+  margin-right: 3px;
 }
