--- a/parser.css
+++ b/parser.css
@@ -5,7 +5,7 @@ html, body {
     width: 100%; 
     height: 100%;
     overflow: hidden;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: monospace;
 }
 .splitter {
     width: 100%;
@@ -115,7 +115,7 @@ html, body {
   margin-bottom:0px;
   margin-top: 0px;
 }
-#second .key{
+#second .key,.array .value{
   color:green;
 } 
 
@@ -125,6 +125,9 @@ html, body {
 .array::before,.object::before{
   /* content: '\25B8'; */
   cursor: pointer;
+}
+span.value,.number{
+  margin-left: 5px;
 }
 .marT5{
   margin-top: 5px;
